# pdfstore

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: app.rs  config.rs  key_config.rs  main.rs
src/app/: mod.rs  ui.rs
src/components/: command.rs  mod.rs  pdf_import_popup.rs
src/components/inbox/: existing_directory_list.rs  managed_pdf_list.rs  mod.rs  paper_directory_list.rs  pdf_detail.rs  pdf_file_loader.rs  pdf_import_popup.rs  searchbar.rs  unmanaged_pdf_list.rs
src/components/utils/: mod.rs  scrollbar.rs  vertical_scroll.rs
src/domain/: mod.rs  pdf_file.rs
src/features/: mod.rs
src/inputs/: events.rs  key.rs  mod.rs
src/ui/: mod.rs
