[package]
name = "pdfstore"
version = "0.0.1"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/unvalley/pdfstore"
repository = "https://github.com/unvalley/pdfstore"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
crossterm = "0.23.2"
easy-cast = "0.4.4"
log = "0.4.16"
tokio = {version = "1.17.0", features = ["full"]}
tui = {version = "0.17.0", features = ["crossterm"], default-features = false}
tui-logger = "0.7.1"
walkdir = "2.3.2"
